# blast-v0.3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  animate_checkpoints.py  spec.md  wip.md
programs/: four_state.mist  mignone_bodo.mist  simple.mist  uniform.mist  wind.mist
src/: blast.cpp  riemann_two_shock.hpp  srhd1d.cpp
